Convert project to mobx with min diff

--- a/todos/package.json
+++ b/todos/package.json
@@ -2,10 +2,12 @@
   "name": "todos",
   "version": "0.0.1",
   "private": true,
-  "devDependencies": {
+  "devDependencies": {    
     "react-scripts": "^2.0.2"
   },
   "dependencies": {
+    "mobx": "^5.8.0",
+    "mobx-react": "^5.4.3",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
