--- a/todos/package.json
+++ b/todos/package.json
@@ -20,7 +20,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^5.0.7",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "satcheljs": "^3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
