--- a/todos/package.json
+++ b/todos/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^16.7.0",
     "react-redux": "^5.0.7",
     "redux": "^3.5.2",
-    "satcheljs": "^3.1.2"
+    "satcheljs": "^4.0.0-beta2",
+    "ts-essentials": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
