--- a/tree/package.json
+++ b/tree/package.json
@@ -30,7 +30,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "react-scripts test --env=node"
+    "test": "react-scripts test --env=node --verbose=false"
   },
   "browserslist": [
     ">0.2%",
