--- a/tree/package.json
+++ b/tree/package.json
@@ -19,8 +19,8 @@
     "mobx-react": "^5.4.3",
     "mobx-react-devtools": "^6.0.3",
     "prop-types": "^15.6.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
     "react-redux": "^5.0.7",
     "redux": "^3.5.2",
     "satcheljs": "^4.0.0-beta2",
